fix: broken visibility on high width

--- a/style.css
+++ b/style.css
@@ -19,17 +19,17 @@ body {
 }
 
 a {
-    color: #fff;
+    color: #eee;
     text-decoration: none;
 }
 
 #logo {
     position: static;
-    width: 60%;
-    padding: 1% 20%;
+    width: 90%;
+    padding: 1% 5%;
     font-size: 10em;
     text-align: center;
-    color: #fff;
+    color: #eee;
 }
 
 #content {
@@ -40,13 +40,13 @@ a {
 .category {
     display: block;
     clear: both;
-    width: 50%;
-    margin: 0px 25%;
+    width: 60%;
+    margin: 0px 20%;
     margin-top: 5%;
     padding: 0px;
     font-size: 2em;
     background: #222;
-    color: #fff;
+    color: #eee;
 }
 
 .label,
@@ -72,7 +72,7 @@ a {
 
 .category:hover .label::before {
     content: "$ cd ";
-    color: #fff;
+    color: #eee;
 }
 
 .list {
@@ -97,7 +97,7 @@ a {
 
 .title::before {
     white-space: pre;
-    color: #fff;
+    color: #eee;
 }
 
 .item:hover .title {
@@ -168,8 +168,8 @@ a {
 
     #etc .label,
     #etc .item {
-        margin: 0px 25%;
-        width: 46%;
+        margin: 0px 20%;
+        width: 56%;
         padding: 1% 2%;
     }
 
@@ -179,23 +179,32 @@ a {
 
     body {
         filter: invert(100%);
-        background: #fff;
+        background: #eee;
+    }
+
+    #logo,
+    #content
+    {
+        position: absolute;
+        top: 0px;
+        left: 0px;
     }
 
     #logo {
-        position: fixed;
-        left: 0px;
-        top: 0px;
         width: 30%;
-        padding: 1%;
+        padding: 5%;
         font-size: 5em;
         color: #eee;
+    }
+
+    #content {
+        right: 0px;
     }
 
     .category,
     #etc .label,
     #etc .item {
-        margin-left: 35%;
+        margin-left: 40%;
         margin-right: 5%;
     }
 
